--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,20 @@ a {
     background: black;
   }
 }
+
+
+.component-space {
+  margin-top: .8rem;
+}
+
+.top-grid{
+  margin-top: .8rem;
+  margin-bottom: .8rem;
+
+}
+
+.header{
+  margin-top: .8rem;
+  margin-bottom: .8rem;
+
+}
